examples/errors/parsing/fun_simple.cn
fun identity : Int -> Int [pure] = {
  n -> n
}

fun negate : Bool -> Bool [pure] = {
  b -> not b
}

main : () [impure] = ()
